# app_mercado_publico

./: .env.example  .gitignore  .pre-commit-config.yaml  Claude.md  README.md  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 616613c3d7cf_perfil_rubros_organismos.py  7c9d2a1f4b3e_oportunidades_seguidas.py  9a1e6b2c5d7f_ofertas_competencia.py  a1b2c3d4e5f6_alertas_intentos_envio.py  b3f7c1d9e2a4_plan_compra.py  c4a8e0f7b1d3_sector_organismos.py  d2f8a6c1b9e0_resumen_usuario_y_sin_frecuencia_perfil.py  e1f4a7c9b2d6_match_feedback.py  f3a9b8c7d6e5_onboarding_usuario.py  fde568616494_tablas_iniciales.py
app/: changelog.py
app/alerts/: detector.py  email.py
contexto/: 01-analisis-api-mercado-publico.md  02-plan-desarrollo-y-auditoria.md  03-prompts-claude-code.md
data/: unspsc_rubros.csv
docs/: 00-estado-actual.md  03-prompts-claude-code.md  03-roadmap.md  04-datos-abiertos.md  05-competencia.md  07-plan-anual.md  08-datos-organismos.md  09-compra-agil-500.md  10-enlace-ficha.md  arquitectura.md  despliegue.md  ingesta.md  operacion.md
scripts/: smoke_test.py  validar_unspsc.py
tests/: conftest.py  test_alerts.py  test_api.py  test_catalogos.py  test_clients.py  test_competencia.py  test_competencia_routes.py  test_datos_abiertos.py  test_db_retry.py  test_feed_agrupado.py  test_feedback_routes.py  test_ficha_routes.py  test_ingest.py  test_jobs.py  test_matching.py  test_models.py  test_plan_compra.py  test_plan_compra_routes.py  test_presentacion.py  test_query.py  test_seguimiento.py  test_seguimiento_routes.py  test_settings.py
(+68 files in other folders)
